# nyc_taxi_rides_prediction_pipeline

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: feature_pipeline.yaml  inference_pipeline.yaml  model_training_pipeline.yaml
data/processed/: ts_data_2023_01.parquet
notebooks/: 01_fetch_data.ipynb  02_validate_and_save.ipynb  05_transform_raw_data_into_features_and_targets.ipynb
notebooks/.ipynb_checkpoints/: 05_transform_raw_data_into_features_and_targets-checkpoint.ipynb  11_lgm_hyper-checkpoint.ipynb  12_load_features_hopsworks-checkpoint.ipynb
pipelines/: feature_pipeline.py
src/: feature_pipeline.py  plot_utils.py
