[project]
name = "nyc-taxi-proj"
version = "0.1.0"
description = ""
authors = [
    {name = "Vamsi Sai Garapati",email = "35292779+vamsisaigarapati@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
